tests/ui/imports/overwrite-vis-unused.stderr
error: unused import: `m::*`
  --> $DIR/overwrite-vis-unused.rs:9:5
   |
LL | use m::*;
   |     ^^^^
   |
note: the lint level is defined here
  --> $DIR/overwrite-vis-unused.rs:3:9
   |
LL | #![deny(unused)]
   |         ^^^^^^
   = note: `#[deny(unused_imports)]` implied by `#[deny(unused)]`

error: aborting due to 1 previous error

